corrected alignments

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,7 +46,7 @@ main {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 th, .team_table_label {
@@ -180,6 +180,7 @@ th, .team_table_label {
 .teams_container_all {
     display: flex;
     flex-direction:row;
+    flex-wrap: wrap;
 }
 
 .team_logo_container {
